# robot_utils

./: .gitmodules  CMakeLists.txt  Doxyfile
include/robot_utils/: controller.hpp  core.hpp  filter.hpp  geometry.hpp  interpolation.hpp
include/robot_utils/controller/: lqr.hpp  mpc.hpp  ommpc.hpp  pid.hpp  pid_node.hpp
include/robot_utils/core/: assert.hpp  computer_info.hpp  math_tools.hpp  periodic_data.hpp  time.hpp  typedef.hpp
include/robot_utils/filter/: td.hpp
include/robot_utils/geometry/: core.hpp  manifold.hpp
include/robot_utils/interpolation/: poly_traj.hpp
src/controller/: lqr.cpp  mpc.cpp  ommpc.cpp  pid.cpp  pid_node.cpp
src/core/: computer_info.cpp
src/filter/: td.cpp
src/interpolation/: poly_traj.cpp
